# platform-stm32f4discovery-xpack

./: CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
device/: README.md
device/include/micro-os-plus/: device.h
meta/: CMakeLists.txt  micro-os-plus-platform-stm32f4discovery-config-version.cmake  micro-os-plus-platform-stm32f4discovery-config.cmake  xpack-helper.cmake
stm32cubemx/: .mxproject  CMakeLists.txt  README.md  stm32cubemx.gpdsc  stm32cubemx.ioc
stm32cubemx/Core/Inc/: stm32f4xx_it.h
stm32cubemx/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
